prevents the message form from being too large

--- a/paiji2_forum/static/forum/style.css
+++ b/paiji2_forum/static/forum/style.css
@@ -1,3 +1,7 @@
+.markItUp, .markItUpEditor {
+		width: 100%;
+}
+
 .forum-action {
     font-size: 14px;
 }
